cluster/apps/tubearchivist/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  selector:
    matchLabels:
      app: tubearchivist
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: ta-media,ta-cache,ta-es,ta-redis
      labels:
        app: tubearchivist
    spec:
      containers:
        - name: tubearchivist
          image: bbilly1/tubearchivist:v0.3.1
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: ta-cache
              mountPath: /youtube
            - name: ta-media
              mountPath: /cache
        - name: es
          image: elasticsearch:8.6.0
          ports:
            - name: es-http
              containerPort: 9200
          volumeMounts:
            - name: ta-es
              mountPath: /usr/share/elasticsearch/data
        - name: redis
          image: redislabs/rejson:2.4.3
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: ta-redis
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: ta-media
          persistentVolumeClaim:
            claimName: ta-media
        - name: ta-cache
          persistentVolumeClaim:
            claimName: ta-cache
        - name: ta-es
          persistentVolumeClaim:
            claimName: ta-es
        - name: ta-redis
          persistentVolumeClaim:
            claimName: ta-redis
