cluster/apps/tubearchivist/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  ports:
    - name: tubearchivist
      port: 8000
  selector:
    app: tubearchivist
